demo-app/k8s-dev/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "demo-app"
  namespace: "default"
  labels:
    app: "demo-app"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "demo-app"
  template:
    metadata:
      labels:
        app: "demo-app"
    spec:
      containers:
      - name: "demo-app"
        image: "asia-south1-docker.pkg.dev/solutions-engineering-312710/demo-app/c7bddd21c81d:63"
