demo-app/k8s-dev/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "demo-app"
  namespace: "default"
  labels:
    app: "demo-app"
spec:
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
  selector:
    app: "demo-app"
  type: "LoadBalancer"
  loadBalancerIP: ""
