demo-app/k8s-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: demo-app
  name: demo-app
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "demo-app-pubip"  
spec:
  rules:
  - host: demo-app.com
  - http:
      paths:
      - backend:
          service:
            name: demo-app
            port:
              number: 5000
        path: /
        pathType: Prefix
